--- a/files/thelounge.service
+++ b/files/thelounge.service
@@ -1,7 +1,10 @@
+[Unit]
+Description=The Lounge
+Requires=docker.service
+After=docker.service
+
 [Service]
-
 Type=exec
-
 ExecStart=/usr/bin/docker run \
     --name thelounge \
     --rm \
@@ -10,7 +13,5 @@ ExecStart=/usr/bin/docker run \
     --volume /var/opt/thelounge:/var/opt/thelounge \
     thelounge/thelounge:4.3.1
 
-
 [Install]
-
 WantedBy=multi-user.target
