Explicitly mark service files as world-readable.
This doesn't change anything behaviorally, but resolves some systemd warnings.

--- a/ansible/tunnel_to_tilde.yaml
+++ b/ansible/tunnel_to_tilde.yaml
@@ -47,7 +47,7 @@
       ansible.builtin.copy:
         src: files/tilde-tunnel.service
         dest: /etc/systemd/system/
-        mode: u=rw,g=,o=
+        mode: u=rw,g=r,o=r
       notify:
         - Reload the service file
         - Restart the service
