--- a/ansible/provision.yaml
+++ b/ansible/provision.yaml
@@ -69,7 +69,7 @@
       ansible.builtin.template:
         src: files/thelounge.service.j2
         dest: /etc/systemd/system/thelounge.service
-        mode: u=rw,g=,o=
+        mode: u=rw,g=r,o=r
       notify:
         - Reload service files
         - Restart The Lounge
