--- a/ansible/provision.yaml
+++ b/ansible/provision.yaml
@@ -1,5 +1,13 @@
 - name: Provision a new instance
   hosts: thelounge
+
+  roles:
+    # Installing The Lounge appears to involve compiling a SQLite binding,
+    # which exhausts a t4g.nano's RAM.
+    - role: geerlingguy.swap
+      become: true
+      swap_file_size_mb: '1024'
+
   tasks:
     # Adapted from https://caddyserver.com/docs/install#debian-ubuntu-raspbian.
     - name: Add signing key for Caddy repository
@@ -13,28 +21,29 @@
       ansible.builtin.apt_repository:
         repo: deb [signed-by=/etc/apt/keyrings/caddy.asc] https://dl.cloudsmith.io/public/caddy/stable/deb/debian any-version main
 
-    # Adapted from https://docs.docker.com/engine/install/ubuntu/.
-    - name: Add signing key for Docker repository
+    # Adapted from https://github.com/nodesource/distributions#deb.
+    - name: Add signing key for Node repository
       become: true
       ansible.builtin.get_url:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        dest: /etc/apt/keyrings/docker.asc
+        url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
+        dest: /etc/apt/keyrings/node.asc
         mode: u=rw,g=r,o=r
-    - name: Add Docker repository
+    - name: Add Node repository
       become: true
       ansible.builtin.apt_repository:
-        repo: deb [signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu jammy stable
+        repo: deb [signed-by=/etc/apt/keyrings/node.asc] https://deb.nodesource.com/node_18.x jammy main
 
-    - name: Install Caddy and Docker
+    - name: Install Caddy and Node
       become: true
       ansible.builtin.apt:
         name:
           - caddy
-          # We use Docker even though The Lounge provides a plain Ubuntu package
-          # because the plain Ubuntu package compiles SQLite at install time, which
-          # seems to bump up against a t4g-nano instance's memory limits.
-          - docker-ce
-          - docker-ce-cli
+          - nodejs
+
+    - name: Install The Lounge
+      become: true
+      ansible.builtin.apt:
+        deb: https://github.com/thelounge/thelounge-deb/releases/download/v4.4.1/thelounge_4.4.1_all.deb
 
     - name: Configure Caddy
       become: true
@@ -46,70 +55,29 @@
         mode: u=rw,g=rw,o=
       notify: Reload Caddy
 
-    - name: Create a system user for The Lounge
-      become: true
-      ansible.builtin.user:
-        name: thelounge
-        system: true
-        create_home: false
-        shell: /usr/sbin/nologin
-        password_lock: true
-      register: thelounge_user_result
-
-    - name: Create the state directory for The Lounge
-      become: true
-      ansible.builtin.file:
-        path: /var/opt/thelounge
-        state: directory
-        owner: thelounge
-        group: thelounge
-        mode: u=rwx,g=,o=
-
-    - name: Install the service file for The Lounge
-      become: true
-      ansible.builtin.template:
-        src: files/thelounge.service.j2
-        dest: /etc/systemd/system/thelounge.service
-        mode: u=rw,g=r,o=r
-      notify:
-        - Reload service files
-        - Restart The Lounge
-
     - name: Configure The Lounge
       become: true
       ansible.builtin.copy:
         src: files/config.js
-        dest: /var/opt/thelounge/config.js
+        dest: /etc/thelounge/config.js
         owner: thelounge
         group: thelounge
         mode: u=rw,g=,o=
       notify: Restart The Lounge
 
-    - name: Install thelounge-docker-exec
-      become: true
-      ansible.builtin.copy:
-        src: files/thelounge-docker-exec
-        dest: /usr/local/bin/thelounge-docker-exec
-        mode: u=rwx,g=x,o=x
-
     - name: Flush handlers
       ansible.builtin.meta: flush_handlers
 
+    # It's probably already enabled and started by default,
+    # but make sure anyway.
     - name: Enable and start The Lounge
       become: true
       ansible.builtin.systemd:
         name: thelounge
         enabled: true
-        # It's probably already started from when we configured it and then restarted it,
-        # but make sure it's started here anyway just in case.
         state: started
 
   handlers:
-    - name: Reload service files
-      become: true
-      ansible.builtin.systemd:
-        daemon_reload: true
-
     - name: Restart The Lounge
       become: true
       ansible.builtin.systemd:
